@@ -1,5 +1,5 @@
 package org.irods.jargon.core.utils;
 public final class JargonVersion {
  public static String VERSION="3.3.3-workflow-SNAPSHOT";
- public static String BUILD_TIME="20130726-1501";
+ public static String BUILD_TIME="20130729-0817";
 }
