@@ -1,5 +1,5 @@
 test.confirm=true
-									test.data.directory=C:/temp/irodsscratch/
+									test.data.directory=/Users/mikeconway/temp/irodsscratch/
 									test.irods.admin=rods
 									test.irods.admin.password=test
 									test.irods.user=test1
@@ -11,21 +11,21 @@ test.confirm=true
 									test3.irods.user=test3
 									test3.irods.password=test
 									test3.irods.resource=test1-resc2
-									test.irods.host=fedZone1
+									test.irods.host=localhost
 									test.irods.port=1247
-									test.irods.zone=fedZone1
+									test.irods.zone=test1
 									jargon.test.kerberos.user=
 									test.resource.group=testResourceGroup
 									test.irods.userDN=test1DN
 									test.irods.scratch.subdir=jargon-scratch
-									test.mac.icommand.path=${jargon.test.mac.icommand.path}
+									test.mac.icommand.path=/opt/iRODS/iRODS2.5/iRODS/clients/icommands/bin/
 									test.option.exercise.remoteexecstream=true
 									test.option.exercise.audit=false
-									test.option.exercise.workflow=false
+									test.option.exercise.workflow=true
 									test.option.distributed.resources=false
-									test.option.registration=false
+									test.option.registration=true
 									test.option.strictACL=false
-									test.option.federated.zone=true
+									test.option.federated.zone=false
 									test.option.kerberos=false
 									test.option.pam=false
 									jargon.test.pam.user=${jargon.test.pam.user}
@@ -35,9 +35,9 @@ test.confirm=true
 									test.federated.irods.user=test1
 									test.federated.irods.password=test
 									test.federated.irods.resource=test1-resc
-									test.federated.irods.host=fedZone2
+									test.federated.irods.host=fedzone2
 									test.federated.irods.port=1247
-									test.federated.irods.zone=fedZone2
+									test.federated.irods.zone=fedzone2
 									test.option.gsi=${test.option.gsi}
 									test.option.gsi.host=${test.option.gsi.host}
 									test.option.gsi.port=${test.option.gsi.port}
